# T3

./: CMakeLists.txt  README.md
includes/: AI.h  Board.h
src/: AI.cpp  Board.cpp  main.cpp
